# serde_rison

./: Cargo.toml  LICENSE  README.md
.github/: codecov.yml
.github/workflows/: check.yml  docs.yml  rolling.yml  test.yml
src/: de.rs  error.rs  lib.rs  number.rs  ser.rs
src/value/: de.rs  mod.rs  se.rs
