[package]
name = "serde_rison"
version = "0.1.0"
edition = "2024"
description = "A serde implementation for the RISON data format"
license = "MIT"
repository = "https://github.com/szymon/serde_rison"
keywords = ["serde", "rison", "serialization", "deserialization"]
categories = ["encoding", "parser-implementations"]

[dependencies]
serde = { version = "1.0.69", features = ["derive"] }
thiserror = "1"

[workspace.lints.clippy]
# Default clippy lints as errors
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# Pedantic as warnings
pedantic = { level = "warn", priority = -1 }

# Exceptions — allowed pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
implicit_hasher = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
unnecessary_wraps = "allow"
unused_async = "allow"
similar_names = "allow"

[workspace.lints.rust]
unused_imports = "warn"
dead_code = "warn"
